@@ -1,5 +1,8 @@
 2009-09-01  David O'Toole  <dto@gnu.org>
 
+	* pulse ammo more scarce
+	* better distribution of random powerups
+	* minimap radar improvements
 	* show required transportation modes for each world
 	* player uses oxygen whenever out of vehicle (unless there's air)
 	* refill oxygen infinitely at vehicle
@@ -7,6 +10,7 @@
 	* max energy tank powerup
 	* unoccupied ships do not beep when damaged
 	* new nebula music
+	* player entry point indicator on minimap (yellow circle)
 	* gravboots
 	* weightless derelict freighters with better layout
   	* no more instadeath on incompatible environments
@@ -15,5 +19,6 @@
 	* added signature powerup fanfare
 	* low hit points and oxygen warning
 	* numbered nebulas
+	* tons of other small changes
 	
 
